<resources>


    <!-- Info -->
    <!--<string name="info_database_deleted">Cleared %s Database!</string>-->
    <!--<string name="select_debit_or_credit">CREDIT/DEBIT?</string>-->
    <!--<string name="select_ebt_type">Please Select EBT Type</string>-->
    <string name="amount_default">0.00</string>
    <string name="time_default">00:00</string>

    <!--history-->
    <string name="history_total">Total</string>
    <string name="history_detail">Detail</string>
    <string name="history_detail_edc_type">EDC Type</string>
    <string name="history_detail_trans_type">Trans Type</string>
    <string name="history_detail_card_no">Card NO.</string>
    <string name="history_detail_status">Status</string>
    <string name="history_detail_auth_code">Auth. Code</string>
    <string name="history_detail_amount">Amount</string>
    <string name="history_detail_ref_no">Ref NO.</string>
    <string name="history_detail_card_type">Card Type</string>
    <string name="history_detail_dateTime">Date/Time</string>
    <string name="history_menu_print_trans_last">Print Last</string>
    <string name="history_menu_print_trans_detail">Print Detail</string>
    <string name="history_menu_print_trans_total">Print Summary</string>
    <string name="history_menu_print_last_total">Last Settle</string>
    <string name="history_menu_print_any">Print any</string>


    <!-- trans UI -->
    <string name="trans_confirm_btn">CONFIRM</string>


    <!-- Base -->
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_00">00</string>
    <string name="num_000">000</string>

    <!--prompt-->
    <string name="prompt_expiry_date_default">MM/YY</string>
    <string name="prompt_date_default">YYYY/MM/DD</string>
    <string name="prompt_input_amount">Please Input Amount</string>
    <string name="prompt_input_tip">Please Input Tip</string>
    <string name="prompt_card_num">Card NO.</string>
    <string name="hint_enter_account">Enter Account Number:</string>
    <string name="prompt_pin">Please Enter PIN</string>
    <string name="prompt_no_pin">No PIN, Please Click OK</string>
    <string name="prompt_offline_pin">Please Enter PIN</string>
    <string name="prompt_use_pinpad">Please use the PINPAD</string>

    <string name="pls_input_4digit">Input Number Must Be 4 Digits</string>
    <string name="data_cannot_zero">The data cannot be zero, please input again</string>
    <string name="invalid_exp_date">Invalid Expiry</string>
    <string name="pls_input_again">Please Input Amount</string>

    <string name="total_amount">Total Amount</string>

    <string name="cancel_sign">Cancel</string>
    <string name="clear_sign">Clear</string>
    <string name="finish_sign">Confirm</string>
    <string name="signature">Signature</string>
    <string name="pls_re_signature">Please Signature Again</string>
    <string name="pls_input_again_date">Please Input Date again</string>
    <string name="please_enter_voucher_number">Please Enter Voucher Number</string>
    <string name="please_enter_auth_code">Please Enter Auth Code</string>
    <string name="pls_input_address">Please Input Address</string>
    <string name="pls_input_zip_code">Please Input Zip Code</string>

    <!-- signature -->
    <string name="signature_clear">Clear</string>
    <string name="signature_done">Enter</string>
    <string name="signature_redo">Signature Data Is Too Long,Please Re-sign</string>

    <!--FSA String-->
    <string name="fsa_healthcare_amt">HealthCare Amount</string>
    <string name="fsa_clinic_amt">Clinic Amount</string>
    <string name="fsa_prescription_amt">Prescription Amount</string>
    <string name="fsa_vision_amt">Vision Amount</string>
    <string name="fsa_dental_amt">Dental Amount</string>
    <string name="fsa_transit_amt">Transit Amount</string>


    <!--Error -->
    <string name="err_invalid_date">Invalid Date. Please input again.</string>

    <!-- Notice -->
    <string name="notice_is_out_of_range">The %1$s must be in %2$d-%3$d</string>
    <string name="notice_amount_is_out_of_range">The amount must be in %1$s-%2$s</string>
    <string name="notice_length_is_out_of_range_2">The length must be greater than %1$d</string>
    <string name="notice_length_is_out_of_range_3">Can not be less than %1$d or exceed %2$d digit(s)</string>
    <string name="notice_value_length_is_wrong">The length must be %1$d</string>
    <string name="notice_percent_value_is_out_of_range">The value must be in (%1$.2f-%2$.2f)%%</string>
    <string name="img_desc" />
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>

    <!-- image workaround -->
    <string name="image_desc"> </string>

</resources>
