<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- 显示金额 -->

    <LinearLayout
        android:id="@+id/trans_amount_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_horizontal"
        android:layout_marginEnd="@dimen/space_horizontal"
        android:layout_marginTop="@dimen/space_vertical"
        android:layout_marginBottom="@dimen/space_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:text="@string/history_detail_amount"
            android:textColor="@color/primary_text_light"
            android:textSize="@dimen/font_size_prompt" />

        <TextView
            android:id="@+id/trans_amount_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|end"
            android:text="@string/amount_default"
            android:textColor="@color/primary_text_light"
            android:textSize="@dimen/font_size_value" />
    </LinearLayout>

    <View style="@style/LongLine" />

    <RelativeLayout
        android:id="@+id/writeUserNameSpace"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:splitMotionEvents="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:background="@drawable/cancel_sign_background"
            android:text="@string/cancel_sign"
            android:textColor="@color/primary_text_light"
            android:textSize="@dimen/font_button"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/clear_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:background="@drawable/clear_sign_background"
            android:text="@string/signature_clear"
            android:textColor="@color/primary_text_light"
            android:textSize="@dimen/font_button"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:background="@drawable/confirm_sign_background"
            android:text="@string/signature_done"
            android:textColor="@color/primary_text_light"
            android:textSize="@dimen/font_button"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>